[package]
name = "aqs-mqtt-downlink-telemetry"
version = "0.1.0"
edition = "2021"
authors = ["AQS Team"]
license = "MIT"
description = "MQTT downlink control server for FreeBSD"

[dependencies]
axum = { version = "0.8", features = ["macros", "json"] }
chrono = { version = "0.4", features = ["serde", "clock"] }
rumqttc = "0.24"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio-rustls", "sqlite", "chrono", "macros"] }
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "time", "net"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

[dev-dependencies]
pretty_assertions = "1"

[profile.release]
lto = true
codegen-units = 1
